--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,55 +1,5 @@
 <h1>Restaurants New</h1>
 
-<%= form_for :restaurant, url: restaurants_path do |f|  %>
-  <% if @restaurant.errors.any? %>
-  <div id="errorExplanation">
-    <h2><%= pluralize(@restaurant.errors.count, "error") %> prohibited
-      this post from being saved:</h2>
-    <ul>
-    <% @restaurant.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
-  </div>
-  <% end %>
-		<p>
-			<%= f.label :name  %><br>
-			<%= f.text_field :name %>
-		</p>
+<%= render 'form'  %> 
 
-		<p>
-			<%= f.label :description %><br>
-			<%= f.text_area :description %>
-		</p>
-
-		<p>
-			<%= f.label :phone_number %><br>
-			<%= f.text_field :phone_number %>
-		</p>
-
-		<p>
-			<%= f.label :address %><br>
-			<%= f.text_field :address %>
-		</p>
-
-		<p>
-			<%= f.label :city %><br>
-			<%= f.text_field :city %>
-		</p>
-
-		<p>
-			<%= f.label :state %><br>
-			<%= f.text_field :state %>
-		</p>
-
-		<p>
-			<%= f.label :zip_code %><br>
-			<%= f.text_field :zip_code %>
-		</p>
-
-		<p>
-		  <%= f.submit %>
-		</p>
-
-<% end  %>
 <%= link_to 'Back', restaurants_path %>
