--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -11,6 +11,7 @@
 			<td><%= restaurant.description %></td>
 			<td><%= link_to 'Show', restaurant %></td>
 			<td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
+			<td><%= link_to 'Destroy', restaurant_path(restaurant), method: :delete, data: { confirm: 'Are you sure?'}  %></td>
 		</tr>	
 	<% end %>
 </table>
