--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,52 +1,54 @@
-
-<%= form_for(@restaurant) do |f| %>
- <% if @restaurant.errors.any? %>
-  <div id="errorExplanation">
-    <h2><%= pluralize(@restaurant.errors.count, "error") %> prohibited
-      this restaurant from being saved:</h2>
-    <ul>
-    <% @restaurant.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
+<%= form_for @restaurant, :html => { :multipart => true, :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :name, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :name, :class => 'text_field' %>
+    </div>
   </div>
-  <% end %>
-		<p>
-			<%= f.label :name  %><br>
-			<%= f.text_field :name %>
-		</p>
+  <div class="control-group">
+    <%= f.label :description, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_area :description, :class => 'text_area' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :phone_number, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :phone_number, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :address, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :address, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :city, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :city, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :state, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :state, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :zip_code, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :zip_code, :class => 'text_field' %>
+    </div>
+  </div>
 
-		<p>
-			<%= f.label :description %><br>
-			<%= f.text_area :description %>
-		</p>
+  <p>
+    <%= f.file_field :image %>
+  </p>  
 
-		<p>
-			<%= f.label :phone_number %><br>
-			<%= f.text_field :phone_number %>
-		</p>
-
-		<p>
-			<%= f.label :address %><br>
-			<%= f.text_field :address %>
-		</p>
-
-		<p>
-			<%= f.label :city %><br>
-			<%= f.text_field :city %>
-		</p>
-
-		<p>
-			<%= f.label :state %><br>
-			<%= f.text_field :state %>
-		</p>
-
-		<p>
-			<%= f.label :zip_code %><br>
-			<%= f.text_field :zip_code %>
-		</p>
-
-		<p>
-		  <%= f.submit %>
-		</p>
-<% end  %>
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.back")),
+                restaurants_path, :class => 'btn' %>
+  </div>
+<% end %>
