--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Editing post</h1>
-
-<%= render 'form'  %>
-
-<%= link_to 'Back', restaurant_path %>
+<%- model_class = Restaurant -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
