--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,39 +1,41 @@
-<h1>Restaurants</h1>
+<%- model_class = Restaurant -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-	<strong>Name:</strong>
-	<%= @restaurant.name %>
-</p>
-
-<p>
-	<strong>Description:</strong>
-	<%= @restaurant.description %>
-</p>
-
-<p>
-	<strong>Phone Number:</strong>
-	<%= @restaurant.phone_number %>
-</p>
-
-<p>
-	<strong>Address:</strong>
-	<%= @restaurant.address %>
-</p>
-
-<p>
-	<strong>City:</strong>
-	<%= @restaurant.city %>
-</p>
-
-<p>
-	<strong>State:</strong>
-	<%= @restaurant.state %>
-</p>
-
-<p>
-	<strong>Zip Code:</strong>
-	<%= @restaurant.zip_code %>
-</p>
-
-<%= link_to 'Back', restaurants_path %>
-<%= link_to 'Edit', edit_restaurant_path(@restaurant) %>
+<dl class="dl-horizontal">
+  <div class = "row">
+    <div class = "span2">
+      <dt><%= image_tag @restaurant.image_url(:masterhead) if @restaurant.image? %></dt>
+    </div>
+    <div class = "span6"><dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+          <dd><%= @restaurant.name %></dd>
+          <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
+          <dd><%= @restaurant.description %></dd>
+          <dt><strong><%= model_class.human_attribute_name(:phone_number) %>:</strong></dt>
+          <dd><%= @restaurant.phone_number %></dd>
+          <dt><strong><%= model_class.human_attribute_name(:address) %>:</strong></dt>
+          <dd><%= @restaurant.address %></dd>
+          <dt><strong><%= model_class.human_attribute_name(:city) %>:</strong></dt>
+          <dd><%= @restaurant.city %></dd>
+          <dt><strong><%= model_class.human_attribute_name(:state) %>:</strong></dt>
+          <dd><%= @restaurant.state %></dd>
+          <dt><strong><%= model_class.human_attribute_name(:zip_code) %>:</strong></dt>
+          <dd><%= @restaurant.zip_code %></dd>
+      </div>  </dl>
+  <div class = "row">
+    <div class = "span9">  
+      <div class="form-actions">
+        <%= link_to t('.back', :default => t("helpers.links.back")),
+                    restaurants_path, :class => 'btn'  %>
+        <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                    edit_restaurant_path(@restaurant), :class => 'btn' %>
+        <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                    restaurant_path(@restaurant),
+                    :method => 'delete',
+                    :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                    :class => 'btn btn-danger' %>
+      </div>
+    </div>
+  </div>
+</div>
