add bucket and images to Amazon S3

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 			<div class = "span9"><%= yield %></div>
 			<div class = "span3">
 				<h2>About Us</h2>
-				<p>More about us</p>
+				<p>We love pizza Restaurants and we want you to love them too! Find your favorit spot, rank them, and add comments.</p>
 			</div>
 	</div>
 </div>
