--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -22,6 +22,10 @@
         <td><%= restaurant.city %></td>
         <td><%= restaurant.state %></td>
         <td>
+ 
+          <%= link_to t('.view', :default => t("helpers.links.view")),
+                      restaurant_path(restaurant), :class => 'btn btn-mini' %>
+
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_restaurant_path(restaurant), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
