--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -25,7 +25,7 @@
  
           <%= link_to t('.view', :default => t("helpers.links.view")),
                       restaurant_path(restaurant), :class => 'btn btn-mini' %>
-
+        <% if current_owner == restaurant.owner %>  
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_restaurant_path(restaurant), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
@@ -33,6 +33,7 @@
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
+        <%  end  %>
         </td>
       </tr>
     <% end %>
