--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -35,14 +35,16 @@
         <%= link_to t('.back', :default => t("helpers.links.back")),
                     restaurants_path, :class => 'btn'  %>
         <% if current_owner == @restaurant.owner  %>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                     edit_restaurant_path(@restaurant), :class => 'btn' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                     restaurant_path(@restaurant),
                     :method => 'delete',
                     :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                     :class => 'btn btn-danger' %>
-        <%  end  %>         
+        <%  end  %> 
+        <%= link_to t('.create_reservation', :default => t("helpers.links.create_reservation")),
+                    new_reservation_path, :class => 'btn' %>
       </div>
     </div>
   </div>
