created catagory sections

--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -42,8 +42,19 @@
       <%= f.text_field :zip_code, :class => 'text_field' %>
     </div>
   </div>
+  <div class="control-group">
+            <label class="control-label">Select:</label>
+        <div class="controls">
+        <% @catagories.each do |catagory| %>
+            <select>
+                <option value="1">Option 1</option>
+                <option value="2">Option 1</option>
+                <option value="3">Option 1</option>
+            </select>
+        </div>
+        </div>
 
-  <h4>Image Upload</h4>
+    <h4>Image Upload</h4>
   <p>
     <%= f.file_field :image %>
   </p>  
