--- a/app/views/restaurants/_restaurant_table.html.erb
+++ b/app/views/restaurants/_restaurant_table.html.erb
@@ -35,4 +35,9 @@
     <td><strong>Owner:</strong></td>
     <td><%= @restaurant.owner.name %></td>
   </tr>
+  <tr> 
+    <td><strong>Categories:</strong></td>
+    <td><%= @restaurant.catagory %></td>
+  </tr>
+
 </table>
