corrected spelling error with category

--- a/app/views/restaurants/_restaurant_table.html.erb
+++ b/app/views/restaurants/_restaurant_table.html.erb
@@ -37,7 +37,7 @@
   </tr>
   <tr> 
     <td><strong>Categories:</strong></td>
-    <td><%= @restaurant.catagory %></td>
+    <td><%= @restaurant.category %></td>
   </tr>
 
 </table>
