--- a/app/assets/stylesheets/category.css.scss
+++ b/app/assets/stylesheets/category.css.scss
@@ -1,7 +1,4 @@
-// Place all the styles related to the restaurants controller here.
+// Place all the styles related to the category controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#restaurant_category_ids {
-	width: 300px;
-}
