--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -44,9 +44,9 @@
   </div>
   
   <div class="control-group">
-    <%= f.label :catagory_ids, "Category", :class => 'control-label' %>
+    <%= f.label :category_ids, "Category", :class => 'control-label' %>
       <div class="controls">
-    <%= f.collection_select :catagory_ids, Catagory.order(:name), :id, :name, {}, {multiple: true} %>
+    <%= f.collection_select :category_ids, category.order(:name), :id, :name, {}, {multiple: true} %>
     </div>
   </div>
 
