--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,3 @@
 <h1>Restaurant Guides</h1>
 <%= link_to "All Restaurants", controller: "restaurants" %>
+<%= link_to "All Categories", category_index_path %>
