--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -16,6 +16,7 @@
       <th><%= model_class.human_attribute_name(:address) %></th>
       <th><%= model_class.human_attribute_name(:city) %></th>
       <th><%= model_class.human_attribute_name(:state) %></th>
+      <th>Map</th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
@@ -27,6 +28,7 @@
         <td><%= restaurant.address %></td>
         <td><%= restaurant.city %></td>
         <td><%= restaurant.state %></td>
+        <td><%= restaurant.latitude %></td>
         <td>
           <%= link_to t('.view', :default => t("helpers.links.view")),
                       restaurant_path(restaurant), :class => 'btn btn-mini' %>
